Added generateKey