@@ -9,10 +9,14 @@ import com.security.twofactorsecurity.model.User;
 import com.security.twofactorsecurity.other.TOTPCode;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.AuthorityUtils;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -47,13 +51,18 @@ public class GoogleAuthenticatorService implements VerificationService {
 
     @Override
     public void allowVerification(Authentication authentication) {
-        Authentication allowAuthentication = new UsernamePasswordAuthenticationToken(
-                authentication.getName(), null, Collections.singleton(Role.PRE_VERIFICATION));
+        //TODO User has access to authenticated endpoints
+        Authentication allowAuthentication = new UsernamePasswordAuthenticationToken(authentication.getName(), null, Set.of(Role.ANONYMOUS, Role.PRE_VERIFICATION));
         SecurityContextHolder.getContext().setAuthentication(allowAuthentication);
     }
 
     @Override
     public String generateKey(String username) {
-        return null;
+        Optional<User> userOptional = userDao.findByUsername(username);
+        User user = userOptional.orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        String secretKey = TOTPCode.generateKey();
+        SecretCode secretCode = new SecretCode(secretKey, user); //TODO encrypt secretKey in db
+        secretCodeDao.save(secretCode);
+        return secretKey;
     }
 }
